# Hella_Rusty

./: .env.example  .gitignore  ARCHITECTURE_DIAGRAMS.md  BUILD_METRICS_README.md  Cargo.toml  LAYER1_IMPLEMENTATION_CHECKLIST.md  LAYER2_IMPLEMENTATION_CHECKLIST.md  LAYER3_IMPLEMENTATION_CHECKLIST.md  LAYER4_IMPLEMENTATION_CHECKLIST.md  LAYER5_IMPLEMENTATION_CHECKLIST.md  LAYER5_IMPLEMENTATION_PLAN.md  LAYER6_IMPLEMENTATION_CHECKLIST.md  LAYER7_IMPLEMENTATION_CHECKLIST.md  LAYER8_IMPLEMENTATION_CHECKLIST.md  OPERATIONS_RUNBOOK.md  PRODUCTION_READINESS_CHECKLIST.md  PROJECT_STATUS.md  README.md  TESTING_README.md  build_layer4.sh  cleanup_resources.ps1  docker-compose.prod.yml  docker-compose.secure.yml  docker-compose.yml  fix_layer4_compilation.bat  fix_layer4_compilation.sh  implementation_plan.md  system_monitor.ps1
.githooks/: README.md  pre-commit  setup-hooks.sh
.github/workflows/: ci-cd.yml  layer5-ci.yml  layer7-ci.yml
.kilocode/: mcp.json
configs/: alertmanager.yml  cost-monitoring.yml  fluent-bit.conf  platform.toml  prometheus-rules.yml  prometheus.yml  secrets-management.yml
configs/grafana/dashboards/: agent-monitoring.json  discovery-monitoring.json  evolution-monitoring.json
configs/grafana/datasources/: datasources.yml
configs/security/: trivy.yaml
docker/: Dockerfile.agent  Dockerfile.discovery  Dockerfile.evolution  Dockerfile.router  Dockerfile.trainer
docs/: K8S_EXTERNAL_SECRETS_SETUP.md  LAYER4_COMPREHENSIVE_ANALYSIS.md  LAYER4_FINAL_REPORT.md  LAYER4_HARDENING_EXECUTION_STATUS.md  LAYER4_HARDENING_PLAN.md  LAYER4_HARDENING_SUMMARY.md  LAYER4_STATUS.md  LAYER4_TEST_RESULTS.md  LAYER4_WASM_INTEGRATION_PLAN.md  MASTER_COMPLETION_PLAN.md  SECRETS_MANAGEMENT.md  SESSION_SUMMARY_OCT21.md  TRANSPARENCY_UPDATE_REPORT.md  WASM_SECURITY_IMPLEMENTATION.md  WEEK1_COMPLETION_SUMMARY.md  WEEK1_FINAL_REPORT.md  WEEK1_PR_DESCRIPTION.md  WEEK1_SECURITY_STATUS.md
docs/deployment/: README.md
docs/security/: SECURITY_AUDIT_LOG.md
k8s/: agent-deployment.yaml  canary-deployment.yaml  discovery-deployment.yaml  evolution-deployment.yaml  network-policy.yaml
models/: config.json
scripts/: restore-secrets.sh  rotate-secrets.sh  test-network-security.sh
src/: agents.rs  audit_logging.rs  inference.rs  lib.rs  orchestration.rs  rate_limiting.rs  training.rs  utils.rs
src/layer1/: Cargo.toml  DEPLOYMENT.md  LAYER1_IMPLEMENTATION_PLAN.md  README.md
src/layer1/src/: data_collector.rs  environmental_scanner.rs  integration_hub.rs  lib.rs  metrics.rs  system_monitor.rs  types.rs
src/layer1/tests/: mod.rs  unit_tests.rs
src/layer2/: Cargo.toml  README.md
src/layer2/src/: lib.rs  metrics.rs  planner.rs  progress_tracker.rs  resource_coordinator.rs  risk_assessor.rs  task_decomposer.rs  types.rs
src/layer2/tests/: mod.rs  unit_tests.rs
src/layer3/: Cargo.toml  README.md
src/layer3/src/: compliance_validator.rs  integrity_checker.rs  lib.rs  metrics.rs  risk_mitigator.rs  safety_validator.rs  types.rs  validation_service.rs
src/layer3/tests/: mod.rs  unit_tests.rs
src/layer4/: Cargo.toml  README.md  fix_layer4_compilation.sh  simple_test.rs
src/layer4/benches/: execution_benchmarks.rs  performance_benchmarks.rs
src/layer4/src/: agent_template.rs  ai_engine.rs  executor.rs  lib.rs  metrics.rs  model_loader.rs  model_types.rs  scheduler.rs  types.rs  wasm_executor.rs
src/layer4/tests/: integration_tests.rs  mod.rs  model_loading_test.rs  performance_tests.rs  security_tests.rs  simple_test.rs  stress_tests.rs  test_runner.rs  test_utils.rs  types_tests.rs  unit_tests.rs
src/layer4/tests/common/: mod.rs
src/layer5/: Cargo.toml  DATA_STRUCTURE_ANALYSIS.md  Dockerfile  LAYER4_INTEGRATION_REQUIREMENTS.md  PERFORMANCE_REQUIREMENTS.md  PROJECT_CHARTER.md  RESOURCE_PLANNING.md  RISK_ASSESSMENT.md  SECURITY_REQUIREMENTS.md  STAKEHOLDER_COMMUNICATION_PLAN.md  alerting-rules.yaml  benchmark.py  continuous-improvement.yaml  deploy-production.sh  k8s-blue-green.yaml  k8s-deployment.yaml  model-retraining.yaml  monitoring-config.yaml  operations-training.md  production-checklist.md
src/layer5/src/: ab_testing.rs  feedback_loop.rs  integration.rs  kpi_ingestion.rs  lib.rs  optimization.rs  pattern_recognition.rs  types.rs
src/layer5/tests/: mod.rs  unit_tests.rs
src/layer6/: Cargo.toml  DEPLOYMENT.md  LAYER6_IMPLEMENTATION_PLAN.md  README.md
src/layer6/src/: adaptive_evolution.rs  fitness_landscape.rs  hyper_heuristics.rs  integration.rs  lib.rs  meta_learning.rs  metrics.rs  population_dynamics.rs  types.rs
src/layer6/tests/: unit_tests.rs
src/layer7/: Cargo.toml  Dockerfile  k8s-deployment.yaml  monitoring-config.yaml
src/layer7/src/: evolution_engine.rs  evolution_pipeline.rs  fitness_evaluator.rs  genetic_operators.rs  genome_manager.rs  integration.rs  lib.rs  types.rs
src/layer7/tests/: mod.rs  unit_tests.rs
src/layer8/: Cargo.toml  Dockerfile  README.md  k8s-deployment.yaml  monitoring-config.yaml
src/layer8/src/: capacity_planner.rs  cost_optimizer.rs  gpu_manager.rs  integration.rs  lib.rs  metrics.rs  resource_allocator.rs  types.rs
src/layer8/tests/: mod.rs  unit_tests.rs
src/migrations/versions/: 001_initial_schema.py
src/platform/: config.rs  context.rs  mod.rs  runtime.rs  service.rs  telemetry.rs
src/utils/: config.rs  metrics.rs  validation.rs
tests/integration/: e2e_8_layer_tests.rs
tests/load/: k6-test.js
tests/sandbox/: package.json  playwright.config.ts
tests/sandbox/tests/: sandbox.spec.ts
tools/chaos/: pod-chaos.yaml
tools/scripts/: backup_databases.sh  deploy.sh  deploy_chimera.py  download_models.py  optimize_performance.py  train_qlora.py  validate_deployment.py
