[package]
name = "project-chimera"
version = "0.1.0"
edition = "2021"

[lib]
name = "chimera_core"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[[bin]]
name = "trainer"
path = "src/bin/trainer.rs"

[[bin]]
name = "router"
path = "src/bin/router.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["ws", "macros"] }

# AI/ML frameworks
candle-core = "0.6"
candle-nn = "0.6"
candle-transformers = "0.6"
candle-datasets = "0.6"
candle-lora = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Message queuing
redis = { version = "0.24", features = ["tokio-comp", "streams"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "json"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"
opentelemetry = "0.21"
opentelemetry-jaeger = "0.20"
metrics = "0.23"
metrics-exporter-prometheus = "0.13"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
once_cell = "1.19"

# Async utilities
async-trait = "0.1"
futures = "0.3"
async-stream = "0.3"

# Security
jsonwebtoken = "9.2"
argon2 = "0.5"

# File operations
walkdir = "2.4"
qdrant-client = "1.15.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[build-dependencies]
bindgen = "0.69"
