[workspace]
members = [
    "src/layer1",
    "src/layer2",
    "src/layer3",
    "src/layer4",
    "src/layer5",
    "src/layer6",
    "src/layer7",
    "src/layer8",
]
exclude = []

[package]
name = "project-chimera"
version = "0.1.0"
edition = "2021"

[lib]
name = "chimera_core"
path = "src/lib.rs"

[[bin]]
name = "agent"
path = "src/bin/agent.rs"

[[bin]]
name = "trainer"
path = "src/bin/trainer.rs"

[[bin]]
name = "router"
path = "src/bin/router.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
redis = { version = "0.24", features = ["tokio-comp", "streams"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
dotenvy = "0.15"
lazy_static = "1.4"
anyhow = "1.0"
async-trait = "0.1"
config = { version = "0.13", default-features = false, features = ["toml", "json"] }
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["full"] }

# Workspace-level build profiles for consistent optimization across all layers
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true
panic = "unwind"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.bench]
opt-level = 3
debug = false
lto = true
debug-assertions = false
overflow-checks = false

[profile.test]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
panic = "unwind"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

