[package]
name = "layer1-discovery"
version = "0.1.0"
edition = "2021"
description = "Layer 1 (Discovery) - Environmental awareness and data collection for Project Chimera"
authors = ["Project Chimera Team"]
license = "MIT"
repository = "https://github.com/BVEnterprisess/Project-Chimera"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
lazy_static = "1.4"

# HTTP client for external APIs
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Collections and utilities
uuid = { version = "1.0", features = ["v4"] }

# Configuration
config = "0.14"

# Database connectivity (for caching)
redis = { version = "0.23", features = ["tokio-comp", "connection-manager"] }

# System information
sysinfo = "0.30"

# Network scanning
socket2 = "0.5"

[dev-dependencies]
tempfile = "3.0"
mockall = "0.12"

[profile.release]
opt-level = 3
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true