[package]
name = "layer2-planning"
version = "0.1.0"
edition = "2021"
description = "Layer 2 (Planning) - Strategic planning and task decomposition for Project Chimera"
authors = ["Project Chimera Team"]
license = "MIT"
repository = "https://github.com/project-chimera/layer2-planning"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
config = "0.13"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Validation
validator = { version = "0.16", features = ["derive"] }

# Testing
[dev-dependencies]
tempfile = "3.0"
mockall = "0.11"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true